fixed logo from wrapping at a specific resolution by adding breakpoints. DONT FORGET TO REFACTOR

--- a/sprint-1/stylesheets/partials/_mixins.scss
+++ b/sprint-1/stylesheets/partials/_mixins.scss
@@ -65,3 +65,8 @@
         @content;
     }
 }
+
+@mixin desktop-spacing {
+    padding: 0 12vw;
+    @content
+}
