--- a/sprint-1/stylesheets/partials/_variables.scss
+++ b/sprint-1/stylesheets/partials/_variables.scss
@@ -9,6 +9,6 @@ $silver: #E1E1E1;
 $dark-silver: #AFAFAF;
 
 // breakpoints
-$tablet-breakpoint: 768px; // 768
-$desktop-breakpoint: 1200px; // 1200
+$tablet-breakpoint: 500px; // set to this value due to inconsistency ratio of screen real estate and spacing
+$desktop-breakpoint: 768px; // 1200
 $large-desktop-breakpoint: 1200px;
